--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" ng-app="test">
+<html class="no-js" ng-app="app">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
-    <meta name="description" content="">
+    <title>Temporary title</title>
+    <meta name="description" content="Temporary description">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
